--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
 <%= render "layouts/navbar" %>
 <div class="container">
   <!-- Content here -->
+  (testing git)
     <%= yield %>
 </div>
   </body>
