--- a/app/views/layouts/_navbar_links.html.erb
+++ b/app/views/layouts/_navbar_links.html.erb
@@ -16,6 +16,9 @@
   <li class="nav-item">
   <%= link_to "Students", students_path, class: "nav-link"  %>
   </li>
+  <li class="nav-item">
+  <%= link_to "Nouvelle inscription", new_student_classroom_path, class: "nav-link"  %>
+  </li>
 
  <!-- 
  <li class="nav-item">
