testing pull of branch

--- a/app/views/classrooms/_form.html.erb
+++ b/app/views/classrooms/_form.html.erb
@@ -13,7 +13,7 @@
 
  <div class="field">
  
-<!--    <input class="form-control" type="text" value="<%= @school.id%>" disabled><br> -->
+<!--    <input class="form-control" type="text" value="< = @school.id >" disabled><br> -->
 
     
      <%= f.number_field :school_id, label: false, value: @school.id, class: "form-control", disabled: true %> <br>
